--- a/index.html
+++ b/index.html
@@ -32,6 +32,14 @@
             <button id="save-button">Save</button>
         </div>
     </div>
+    <div id="pwa-dialog" class="dialog">
+        <div class="dialog-content">
+            <span class="close-button">&times;</span>
+            <h2>PWA Installation</h2>
+            <p>To install this app, use the "Add to Home Screen" option in your browser.</p>
+            <button id="pwa-ok-button">OK</button>
+        </div>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
